chore: Combined COPY commands and moved ENV commands later

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,5 @@
 # Builder, tester and runtime container for local development
 FROM node:8.7-alpine
-ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
 # Required by the current flow version (can be removed later?)
 RUN apk --no-cache add ca-certificates wget && \
@@ -8,10 +7,9 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /server
+ENV NODE_ENV development
 RUN npm install nodemon -g
-COPY ./package.json /server/package.json
-COPY ./package-lock.json /server/package-lock.json
-COPY ./.flowconfig /server/.flowconfig
+COPY ./package.json ./package-lock.* ./.flowconfi* /server/
 RUN npm install --loglevel warn
 RUN npm run types-install
 COPY . /server
