--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,5 @@
 # TODO: use multi-stage dockerfile also locally?
 FROM node:8.7-alpine
-ENV NODE_ENV development
 RUN apk add --update-cache build-base python git
 # Required by the current flow version (can be removed later?)
 RUN apk --no-cache add ca-certificates wget && \
@@ -8,9 +7,8 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /client
-COPY ./package.json /client/package.json
-COPY ./package-lock.json /client/package-lock.json
-COPY ./.flowconfig /client/.flowconfig
+COPY ./package.json ./package-lock.* ./.flowconfi* /client/
+ENV NODE_ENV development
 RUN npm install --loglevel warn
 RUN npm run types-install
 COPY . /client
