--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -2,12 +2,6 @@
 FROM node:8.7-alpine as builder
 ARG TARGET_ENV=prod
 ARG BUILD_VERSION
-ENV TARGET_ENV ${TARGET_ENV}
-ENV BUILD_VERSION ${BUILD_VERSION}
-ENV NODE_ENV development
-ENV API_ROOT ''
-ENV API_URL /api
-ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
 RUN apk add --update-cache build-base python git
 # Required by the current flow version (can be removed later?)
 RUN apk --no-cache add ca-certificates wget && \
@@ -15,9 +9,13 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /client
-COPY ./package.json /client/package.json
-COPY ./package-lock.json /client/package-lock.json
-COPY ./.flowconfig /client/.flowconfig
+COPY ./package.json ./package-lock.* ./.flowconfi* /client/
+ENV TARGET_ENV ${TARGET_ENV}
+ENV BUILD_VERSION ${BUILD_VERSION}
+ENV NODE_ENV development
+ENV API_ROOT ''
+ENV API_URL /api
+ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
 RUN npm install --loglevel warn
 RUN npm run types-install
 COPY . /client
