--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,8 +1,6 @@
 # Builder and tester container for production build
 FROM node:8.7-alpine as builder
 ARG TARGET_ENV=prod
-ENV TARGET_ENV ${TARGET_ENV}
-ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
 # Required by the current flow version (can be removed later?)
 RUN apk --no-cache add ca-certificates wget && \
@@ -10,9 +8,9 @@ RUN apk --no-cache add ca-certificates wget && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.27-r0/glibc-2.27-r0.apk && \
   apk add glibc-2.27-r0.apk
 WORKDIR /server
-COPY ./package.json /server/package.json
-COPY ./package-lock.json /server/package-lock.json
-COPY ./.flowconfig /server/.flowconfig
+COPY ./package.json ./package-lock.* ./.flowconfi* /server/
+ENV TARGET_ENV ${TARGET_ENV}
+ENV NODE_ENV development
 RUN npm install --loglevel warn
 # RUN npm run types-install
 COPY . /server
