--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,12 +1,10 @@
 # TODO: use multi-stage dockerfile also locally?
 FROM node:8.7-alpine
-ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
 WORKDIR /worker
+ENV NODE_ENV development
 RUN npm install nodemon -g
-COPY ./package.json /worker/package.json
-COPY ./package-lock.json /worker/package-lock.json
-COPY ./.flowconfig /worker/.flowconfig
+COPY ./package.json ./package-lock.* ./.flowconfi* /worker/
 RUN npm install --loglevel warn
 RUN npm run types-install
 COPY . /worker
