--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "koa": "^2.4.1",
     "koa-basic-auth": "^2.0.0",
     "koa-better-body": "^3.0.4",
+    "koa-body-parsers": "^3.1.0",
     "koa-cache-control": "^2.0.0",
     "koa-convert": "^1.2.0",
     "koa-jwt": "^1.2.0",
