--- a/scripts/helm/templates/configmap.yaml
+++ b/scripts/helm/templates/configmap.yaml
@@ -11,6 +11,7 @@ data:
   ENV: {{ .Values.env | quote }}
   DEBUG: {{ .Values.debug | quote }}
   LOG_FORMAT: {{ .Values.logFormat | quote }}
+  LOG_LEVEL: {{ .Values.logLevel | quote }}
   PROJECT: {{ .Values.project.name | quote }}
   COMPANY: {{ .Values.project.company | quote }}
   FAMILY: {{ .Values.project.family | quote }}
