chore: Small tuning

--- a/package.json
+++ b/package.json
@@ -9,37 +9,48 @@
     "install-all:client": "cd client && npm install && npm run types-install",
     "install-all:server": "cd server && npm install && npm run types-install",
     "install-all:worker": "cd worker && npm install && npm run types-install",
-    "taito-init:local:clean": "taito -z init --clean && npm run clean:storage",
-    "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
+
+    "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
+    "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data",
+    "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
+    "clean:storage": "echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
+    "import-db-data": "if [[ -f ./database/data/${taito_env}.sql ]]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
+
     "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
     "info:dev": "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json (username/password)'",
     "info:test": "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json (username/password)'",
     "info:staging": "TODO",
     "info:prod": "TODO",
+
     "lint": "echo Running lint && npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker",
     "lint:admin": "cd admin && npm run lint",
     "lint:bot": "cd bot && npm run lint",
     "lint:client": "cd client && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
+
     "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:server unit:worker",
     "unit:admin": "taito run: admin -- npm run unit",
     "unit:bot": "echo TODO unit:bot",
     "unit:client": "taito run: client -- npm run unit",
     "unit:server": "taito run: server -- npm run unit",
     "unit:worker": "echo TODO unit:worker",
+
     "test": "npm-run-all --parallel test:admin test:bot test:client test:server test:worker",
     "test:admin": "taito util-test:${taito_env} admin",
     "test:bot": "echo TODO test:bot",
     "test:client": "taito util-test:${taito_env} client",
     "test:server": "taito util-test:${taito_env} server",
     "test:worker": "echo TODO test:worker",
+
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
     "analyze:admin": "cd admin && npm run analyze",
     "analyze:client": "cd client && npm run analyze",
+
     "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "docs": "echo TODO: generate docs in package.json",
     "scan": "echo 'Linting is executed in Dockerfiles during build' && echo 'TODO: execute code analysis here?'",
+
     "commit": "echo 'Running commitizen locally' && git-cz",
     "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
     "precommit": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
