chore: Unit test tuning

--- a/package.json
+++ b/package.json
@@ -22,26 +22,26 @@
     "info:staging": "TODO",
     "info:prod": "TODO",
 
-    "lint": "echo Running lint && npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker",
+    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker",
     "lint:admin": "cd admin && npm run lint",
     "lint:bot": "cd bot && npm run lint",
     "lint:client": "cd client && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
 
-    "unit": "npm-run-all --parallel unit:admin unit:bot unit:client unit:server unit:worker",
-    "unit:admin": "taito run: admin -- npm run unit",
-    "unit:bot": "echo TODO unit:bot",
-    "unit:client": "taito run: client -- npm run unit",
-    "unit:server": "taito run: server -- npm run unit",
-    "unit:worker": "echo TODO unit:worker",
+    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:bot unit:client unit:server unit:worker",
+    "unit:admin": "cd admin && npm run unit",
+    "unit:bot": "cd bot && npm run unit",
+    "unit:client": "cd admin && npm run unit",
+    "unit:server": "cd admin && npm run unit",
+    "unit:worker": "cd worker && npm run unit",
 
     "test": "npm-run-all --parallel test:admin test:bot test:client test:server test:worker",
     "test:admin": "taito util-test:${taito_env} admin",
-    "test:bot": "echo TODO test:bot",
+    "test:bot": "taito util-test:${taito_env} bot",
     "test:client": "taito util-test:${taito_env} client",
     "test:server": "taito util-test:${taito_env} server",
-    "test:worker": "echo TODO test:worker",
+    "test:worker": "taito util-test:${taito_env} worker",
 
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
     "analyze:admin": "cd admin && npm run analyze",
@@ -54,10 +54,9 @@
     "commit": "echo 'Running commitizen locally' && git-cz",
     "commitmsg": "echo 'NOTE: Running validate-commit-msg locally' && validate-commit-msg",
     "precommit": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
-    "prepush": "npm-run-all --parallel lint disabled-types disabled-unit",
+    "prepush": "npm-run-all --parallel lint disabled-types unit",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "disabled-types": "echo flow/typescript check disabled on prepush",
-    "disabled-unit": "echo unit tests disabled on prepush",
     "release-pre:prod": "semantic-release pre",
     "release-post:prod": "semantic-release post"
   },
