--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "types-install": "if [ -f .flowconfig ]; then flow-typed install; elif [ -f tsconfig.json ]; then echo TODO typescript install; fi",
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
-    "unit": "echo 'TODO run unit tests'",
+    "unit": "mocha --require babel-core/register --recursive 'src/**/*.unit.js' 'test/**/*.unit.js'",
     "test": "mocha --require babel-core/register --recursive 'src/**/*.test.js' 'test/**/*.test.js'",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
