docs: Improved documentation on how to remove extra stack components

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "install-ci": "echo '# No additional dependencies need to be installed in ci mode'",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
     "install-all": "npm-run-all install-all:admin install-all:bot install-all:client install-all:server install-all:worker",
-    "install-all:admin": "cd admin && npm install && npm run types-install",
-    "install-all:bot": "cd bot && npm install && npm run types-install",
-    "install-all:client": "cd client && npm install && npm run types-install",
-    "install-all:server": "cd server && npm install && npm run types-install",
-    "install-all:worker": "cd worker && npm install && npm run types-install",
+    "install-all:admin": "if [ -d admin ]; then cd admin && npm install && npm run types-install; fi",
+    "install-all:bot": "if [ -d bot ]; then cd bot && npm install && npm run types-install; fi",
+    "install-all:client": "if [ -d client ]; then cd client && npm install && npm run types-install; fi",
+    "install-all:server": "if [ -d server ]; then cd server && npm install && npm run types-install; fi",
+    "install-all:worker": "if [ -d worker ]; then cd worker && npm install && npm run types-install; fi",
 
     "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
     "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data",
     "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
-    "clean:storage": "echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
+    "clean:storage": "if [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
 
     "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
@@ -23,29 +23,29 @@
     "info:prod": "TODO",
 
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker",
-    "lint:admin": "cd admin && npm run lint",
-    "lint:bot": "cd bot && npm run lint",
-    "lint:client": "cd client && npm run lint",
-    "lint:server": "cd server && npm run lint",
-    "lint:worker": "cd worker && npm run lint",
+    "lint:admin": "if [ -d admin ]; then cd admin && npm run lint; fi",
+    "lint:bot": "if [ -d bot ]; then cd bot && npm run lint; fi",
+    "lint:client": "if [ -d client ]; then cd client && npm run lint; fi",
+    "lint:server": "if [ -d server ]; then cd server && npm run lint; fi",
+    "lint:worker": "if [ -d worker ]; then cd worker && npm run lint; fi",
 
     "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:bot unit:client unit:server unit:worker",
-    "unit:admin": "cd admin && npm run unit",
-    "unit:bot": "cd bot && npm run unit",
-    "unit:client": "cd client && npm run unit",
-    "unit:server": "cd server && npm run unit",
-    "unit:worker": "cd worker && npm run unit",
+    "unit:admin": "if [ -d admin ]; then cd admin && npm run unit; fi",
+    "unit:bot": "if [ -d bot ]; then cd bot && npm run unit; fi",
+    "unit:client": "if [ -d client ]; then cd client && npm run unit; fi",
+    "unit:server": "if [ -d server ]; then cd server && npm run unit; fi",
+    "unit:worker": "if [ -d worker ]; then cd worker && npm run unit; fi",
 
     "test": "npm-run-all test:admin test:bot test:client test:server test:worker",
-    "test:admin": "taito util-test:${taito_env} admin",
-    "test:bot": "echo DISABLED taito util-test:${taito_env} bot",
-    "test:client": "taito util-test:${taito_env} client",
-    "test:server": "taito util-test:${taito_env} server",
-    "test:worker": "echo DISABLED taito util-test:${taito_env} worker",
+    "test:admin": "if [ -d admin ]; then taito util-test:${taito_env} admin; fi",
+    "test:bot": "if [ -d bot ]; then echo DISABLED taito util-test:${taito_env} bot; fi",
+    "test:client": "if [ -d client ]; then taito util-test:${taito_env} client; fi",
+    "test:server": "if [ -d server ]; then taito util-test:${taito_env} server; fi",
+    "test:worker": "if [ -d worker ]; then echo DISABLED taito util-test:${taito_env} worker; fi",
 
     "analyze": "npm-run-all --parallel analyze:admin analyze:client",
-    "analyze:admin": "cd admin && npm run analyze",
-    "analyze:client": "cd client && npm run analyze",
+    "analyze:admin": "if [ -d admin ]; cd admin && npm run analyze; fi",
+    "analyze:client": "if [ -d client ]; cd client && npm run analyze; fi",
 
     "project-contacts": "cat PROJECT.md | sed -n -e '/^## Contacts.*$/,/^#.*$/{ /^## Contacts.*$/d; /^#.*$/d; p; }'",
     "docs": "echo TODO: generate docs in package.json",
