chore: Updated some libs

--- a/admin/.babelrc
+++ b/admin/.babelrc
@@ -1,13 +1,13 @@
 {
   "presets": [
     [
-      "es2015",
+      "env",
       {
         "loose": true,
         "modules": false
       }
     ],
-    "flow",
+    // "flow",
     "stage-2",
     "react"
   ],
