--- a/admin/package.json
+++ b/admin/package.json
@@ -20,38 +20,38 @@
     "aor-json-rest-client": "~2.1.0",
     "aor-language-french": "~1.8.0",
     "aor-rich-text-input": "~1.0.0",
-    "axios": "^0.16.2",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "history": "^4.7.2",
-    "immutability-helper": "^2.4.0",
+    "immutability-helper": "^2.7.0",
     "material-ui": "^0.19.3",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "qs": "^6.5.1",
     "raven-js": "^3.18.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
+    "redux-actions": "^2.3.2",
     "redux-form": "^7.1.0",
-    "redux-saga": "^0.15.6",
-    "styled-components": "^2.2.1",
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.2.6",
     "auth0-js": "^9.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.0.0",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-styled-components": "^1.3.0",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-airbnb-base": "11.1.2",
@@ -63,20 +63,20 @@
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.5",
-    "flow-bin": "^0.69.0",
+    "file-loader": "^1.1.11",
+    "flow-bin": "^0.72.0",
     "flow-typed": "^2.4.0",
     "flow-webpack-plugin": "^1.2.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^20.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "json-loader": "^0.5.7",
-    "postcss-loader": "^2.0.6",
-    "prettier": "^1.8.1",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1"
+    "postcss-loader": "^2.1.5",
+    "prettier": "^1.12.1",
+    "react-hot-loader": "^4.1.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.11.3",
+    "webpack-dev-server": "^2.11.1"
   }
 }
