--- a/client/package.json
+++ b/client/package.json
@@ -16,42 +16,42 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/icons": "^1.0.0-rc.0",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "color": "^2.0.0",
+    "color": "^3.0.0",
     "history": "^4.7.2",
-    "immutability-helper": "^2.4.0",
-    "js-cookie": "^2.1.4",
-    "material-ui": "^1.0.0-beta.17",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "prop-types": "^15.6.0",
+    "immutability-helper": "^2.7.0",
+    "js-cookie": "^2.2.0",
+    "prop-types": "^15.6.1",
     "raven-js": "^3.18.1",
-    "react": "^16.0.0",
-    "react-components-kit": "^4.1.0",
-    "react-dom": "^16.0.0",
-    "react-loadable": "^5.2.2",
-    "react-redux": "^5.0.6",
+    "react": "^16.3.2",
+    "react-components-kit": "^4.2.2",
+    "react-dom": "^16.3.2",
+    "react-loadable": "^5.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.6",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
-    "redux-saga": "^0.15.6",
-    "styled-components": "^2.2.1"
+    "redux-actions": "^2.3.2",
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.0.0",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-styled-components": "^1.3.0",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-airbnb-base": "11.1.2",
@@ -62,26 +62,26 @@
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.0.0",
     "eslint-loader": "^1.9.0",
-    "file-loader": "^1.1.5",
-    "flow-bin": "^0.69.0",
+    "file-loader": "^1.1.11",
+    "flow-bin": "^0.72.0",
     "flow-typed": "^2.4.0",
     "flow-webpack-plugin": "^1.2.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^21.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "json-loader": "^0.5.7",
-    "postcss-loader": "^2.0.7",
-    "prettier": "^1.8.1",
-    "react-hot-loader": "^3.0.0",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0",
+    "postcss-loader": "^2.1.5",
+    "prettier": "^1.12.1",
+    "react-hot-loader": "^4.1.3",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
-    "redux-saga-tester": "1.0.370",
+    "redux-saga-tester": "^1.0.379",
     "redux-testkit": "^1.0.6",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.7.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1"
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.11.3",
+    "webpack-dev-server": "^2.11.1"
   }
 }
