--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
     "clean:storage": "if [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
-    "info:local": "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json (username/password)'",
-    "info:dev": "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json (username/password)'",
-    "info:test": "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json (username/password)'",
-    "info:staging": "TODO",
-    "info:prod": "TODO",
+    "show-basic-auth": "echo Temporary basic auth username/password: TODO",
+    "info:local": "npm run show-basic-auth && echo && taito secrets | grep 'Showing\\|PASSWORD'",
+    "info:dev": "npm run show-basic-auth && echo && taito secrets:dev | grep -A 1 'Showing\\|user.'",
+    "info:test": "npm run show-basic-auth && echo && taito secrets:test | grep -A 1 'Showing\\|user.'",
+    "info:staging": "npm run show-basic-auth && echo && echo TODO",
+    "info:prod": "npm run show-basic-auth && echo && echo TODO",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:bot lint:client lint:server lint:worker",
     "lint:admin": "if [ -d admin ]; then cd admin && npm run lint; fi",
     "lint:bot": "if [ -d bot ]; then cd bot && npm run lint; fi",
@@ -96,12 +97,12 @@
   },
   "devDependencies": {
     "commitizen": "^2.9.6",
-    "cz-conventional-changelog": "^2.0.0",
-    "flow-bin": "^0.69.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "flow-bin": "^0.72.0",
     "husky": "^0.14.3",
     "last-release-git": "0.0.3",
-    "npm-run-all": "^4.0.2",
-    "semantic-release": "^8.1.2",
+    "npm-run-all": "^4.1.3",
+    "semantic-release": "^15.4.1",
     "validate-commit-msg": "^2.14.0"
   }
 }
