--- a/package.json
+++ b/package.json
@@ -104,5 +104,9 @@
     "npm-run-all": "^4.1.3",
     "semantic-release": "^15.4.1",
     "validate-commit-msg": "^2.14.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TaitoUnited/server-template.git"
   }
 }
