--- a/package.json
+++ b/package.json
@@ -95,6 +95,10 @@
       "path": "./node_modules/semantic-release/src/lib/plugin-noop.js"
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:TaitoUnited/server-template.git"
+  },
   "devDependencies": {
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
@@ -104,9 +108,5 @@
     "npm-run-all": "^4.1.3",
     "semantic-release": "^8.1.2",
     "validate-commit-msg": "^2.14.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/TaitoUnited/server-template.git"
   }
 }
