feat: Prune stack during project create

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-# NOTE: Remove all extra containers that you don't need.
-
 server-template-ingress:
   container_name: server-template-ingress
   image: nginx:1.13.8-alpine
@@ -14,6 +12,7 @@ server-template-ingress:
     - "./docker-nginx.conf:/etc/nginx/nginx.conf"
     - "./docker-nginx.htpasswd:/etc/nginx/.htpasswd"
 
+# admin start
 server-template-admin:
   container_name: server-template-admin
   build: ./admin
@@ -36,7 +35,9 @@ server-template-admin:
     # multiple environments (dev, test, staging, prod). Read environment
     # specific settings from the API. You can usually derive api location from
     # the browser url of the GUI.
+# admin end
 
+# client start
 server-template-client:
   container_name: server-template-client
   build: ./client
@@ -59,7 +60,9 @@ server-template-client:
     # multiple environments (dev, test, staging, prod). Read environment
     # specific settings from the API. You can usually derive api location from
     # the browser url of the GUI.
+# client end
 
+# server start
 server-template-server:
   container_name: server-template-server
   build: ./server
@@ -101,7 +104,9 @@ server-template-server:
     S3_BUCKET: bucket
     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
     S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+# server end
 
+# bot start
 # server-template-bot:
 #   container_name: server-template-bot
 #   build: ./bot
@@ -127,7 +132,9 @@ server-template-server:
 #     API_PORT: 3332
 #     ADMIN_PASSWORD: password
 #     USER_PASSWORD: password
+# bot end
 
+# worker start
 # server-template-worker:
 #   container_name: server-template-worker
 #   build: ./worker
@@ -164,23 +171,29 @@ server-template-server:
 #     S3_BUCKET: bucket
 #     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 #     S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+# worker end
 
+# cache start
 server-template-cache:
   container_name: server-template-cache
   image: redis:alpine
   restart: on-failure
   ports:
     - "6379"
+# cache end
 
+# queue start
 # server-template-queue:
 #   container_name: server-template-queue
 #   image: rabbitmq:alpine
 #   restart: on-failure
 #   ports:
 #     - "5672"
+# queue end
 
 # "EXTERNAL RESOURCES"
 
+# database start
 server-template-database:
   container_name: server-template-database
   image: postgres:9.6
@@ -193,7 +206,9 @@ server-template-database:
     POSTGRES_PASSWORD: secret
   volumes:
     - "./database:/docker-entrypoint-initdb.d"
+# database end
 
+# storage start
 server-template-storage:
   container_name: server-template-storage
   image: minio/minio:latest
@@ -204,3 +219,6 @@ server-template-storage:
     MINIO_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
   volumes:
     - "./storage:/storage"
+# storage end
+
+# EOF
