--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -20,6 +20,7 @@ http {
         server_name             localhost;
         client_max_body_size    32m;
 
+        # server start
         # Forward /api to server
         location /api {
             proxy_pass http://server-template-server:3332;
@@ -38,7 +39,9 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+        # server end
 
+        # admin start
         # Forward /admin to admin
         location /admin {
             proxy_pass http://server-template-admin:3334;
@@ -57,7 +60,9 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+        # admin end
 
+        # client start
         # Forward / to client
         location / {
             proxy_pass http://server-template-client:3333;
@@ -78,5 +83,6 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+        # client end
     }
 }
