--- a/admin/package.json
+++ b/admin/package.json
@@ -35,8 +35,7 @@
     "redux-actions": "^2.3.2",
     "redux-form": "^7.1.0",
     "redux-saga": "^0.16.0",
-    "styled-components": "^3.2.6",
-    "auth0-js": "^9.2.1"
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -48,7 +47,6 @@
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
@@ -64,9 +62,6 @@
     "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.11",
-    "flow-bin": "^0.72.0",
-    "flow-typed": "^2.4.0",
-    "flow-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
