--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -84,7 +84,7 @@ steps:
 - id: ci-prepare
   waitFor: ['-']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-prepare:$BRANCH_NAME', 'server', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-prepare:server:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -178,7 +178,7 @@ steps:
 - id: ci-build-admin
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:$BRANCH_NAME', 'admin', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-build:admin:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -196,7 +196,7 @@ steps:
 - id: ci-push-admin
   waitFor: ['ci-build-admin']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:$BRANCH_NAME', 'admin', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-push:admin:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -214,7 +214,7 @@ steps:
 - id: ci-build-bot
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:$BRANCH_NAME', 'bot', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-build:bot:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -232,7 +232,7 @@ steps:
 - id: ci-push-bot
   waitFor: ['ci-build-bot']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:$BRANCH_NAME', 'bot', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-push:bot:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -250,7 +250,7 @@ steps:
 - id: ci-build-client
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:$BRANCH_NAME', 'client', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-build:client:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -268,7 +268,7 @@ steps:
 - id: ci-push-client
   waitFor: ['ci-build-client']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:$BRANCH_NAME', 'client', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-push:client:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -286,7 +286,7 @@ steps:
 - id: ci-build-server
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:$BRANCH_NAME', 'server', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-build:server:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -304,7 +304,7 @@ steps:
 - id: ci-push-server
   waitFor: ['ci-build-server']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:$BRANCH_NAME', 'server', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-push:server:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -322,7 +322,7 @@ steps:
 - id: ci-build-worker
   waitFor: ['ci-release-pre']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-build:$BRANCH_NAME', 'worker', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-build:worker:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
@@ -340,7 +340,7 @@ steps:
 - id: ci-push-worker
   waitFor: ['ci-build-worker']
   name: '${_TEMPLATE_DEFAULT_TAITO_IMAGE}'
-  args: ['ci-push:$BRANCH_NAME', 'worker', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  args: ['ci-push:worker:$BRANCH_NAME', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
   env:
     - taito_mode=ci
     - template_default_taito_image=${_TEMPLATE_DEFAULT_TAITO_IMAGE}
