--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,6 +13,8 @@ substitutions:
   _TEMPLATE_DEFAULT_ZONE:
   _TEMPLATE_DEFAULT_ZONE_PROD:
   _TEMPLATE_DEFAULT_PROVIDER:
+  _TEMPLATE_DEFAULT_PROVIDER_ORG_ID:
+  _TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD:
   _TEMPLATE_DEFAULT_PROVIDER_REGION:
   _TEMPLATE_DEFAULT_PROVIDER_REGION_PROD:
   _TEMPLATE_DEFAULT_PROVIDER_ZONE:
@@ -42,6 +44,8 @@ steps:
     export template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     export template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     export template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    export template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    export template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     export template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     export template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     export template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -93,6 +97,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -113,6 +119,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -131,6 +139,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -149,6 +159,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -169,6 +181,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -187,6 +201,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -205,6 +221,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -223,6 +241,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -241,6 +261,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -259,6 +281,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -277,6 +301,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -295,6 +321,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -313,6 +341,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -331,6 +361,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -349,6 +381,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -368,6 +402,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -385,6 +421,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -404,6 +442,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -422,6 +462,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -439,6 +481,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -458,6 +502,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
@@ -475,6 +521,8 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
+    - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
     - template_default_provider_region_prod=${_TEMPLATE_DEFAULT_PROVIDER_REGION_PROD}
     - template_default_provider_zone=${_TEMPLATE_DEFAULT_PROVIDER_ZONE}
