--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,7 +34,7 @@ steps:
     - commit_sha=$COMMIT_SHA
     - build_id=$BUILD_ID
     - full_repo_name=$REPO_NAME
-    - image_path=eu.gcr.io/$PROJECT_ID/$REPO_NAME/client:$COMMIT_SHA
+    - image_path=eu.gcr.io/$PROJECT_ID/$REPO_NAME/server:$COMMIT_SHA
   args:
   - '-c'
   - |
