--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,25 +1,27 @@
 {
-  "presets": [
+  presets: [
     [
-      "env",
+      'env',
       {
-        "loose": true,
-        "modules": false
+        loose: true,
+        modules: false
       }
     ],
+    // NOTE: for flow
     // "flow",
-    "stage-2",
-    "react"
+    'stage-2',
+    'react'
   ],
-  "env": {
+  env: {
     // When testing we want to compile modules to commonjs
-    "test": {
-      "presets": ["es2015", "stage-2", "react"]
+    test: {
+      presets: ['es2015', 'stage-2', 'react']
     },
-    "development": {
-      "plugins": [
+    development: {
+      plugins: [
+        // NOTE: for styled components
         // "babel-plugin-styled-components",
-        "react-hot-loader/babel"
+        'react-hot-loader/babel'
       ]
     }
   }
