--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "history": "^4.7.2",
     "immutability-helper": "^2.7.0",
     "prop-types": "^15.6.1",
+    "qs": "^6.5.2",
     "raven-js": "^3.25.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -46,15 +47,15 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-config-airbnb-base": "11.1.2",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.4.0",
     "eslint-loader": "^1.9.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
