chore: react-admin 2.x

--- a/admin/package.json
+++ b/admin/package.json
@@ -15,27 +15,36 @@
       "./config/setup-jest.js"
     ]
   },
+  "_NoteThereWereAdded_Obsolete?": "axios, babel-polyfill, history, immutability-helper, prop-types, redux-actions, qs",
   "dependencies": {
-    "admin-on-rest": "^1.3.2",
-    "aor-json-rest-client": "~2.1.0",
-    "aor-language-french": "~1.8.0",
-    "aor-rich-text-input": "~1.0.0",
+    "@material-ui/core": "~1.0.0",
+    "@material-ui/icons": "~1.0.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "data-generator": "^1.0.0",
+    "fakerest": "~2.1.0",
+    "fetch-mock": "~6.3.0",
     "history": "^4.7.2",
     "immutability-helper": "^2.7.0",
-    "material-ui": "^0.19.3",
+    "json-graphql-server": "~2.1.1",
     "prop-types": "^15.6.1",
-    "qs": "^6.5.1",
-    "raven-js": "^3.18.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
+    "qs": "^6.5.2",
+    "ra-data-fakerest": "^2.0.0",
+    "ra-data-graphql-simple": "^2.0.0",
+    "ra-data-simple-rest": "~2.0.0",
+    "ra-input-rich-text": "^2.0.0",
+    "ra-language-english": "^2.0.0",
+    "ra-language-french": "^2.0.0",
+    "react": "~16.3.1",
+    "react-admin": "^2.0.0",
+    "react-dom": "~16.3.1",
+    "react-redux": "~5.0.7",
+    "react-router-dom": "~4.2.2",
+    "react-scripts": "1.1.4",
+    "recompose": "~0.26.0",
     "redux-actions": "^2.3.2",
-    "redux-form": "^7.1.0",
-    "redux-saga": "^0.16.0",
-    "styled-components": "^3.2.6"
+    "redux-form": "~7.3.0",
+    "redux-saga": "~0.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -44,34 +53,37 @@
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-config-airbnb-base": "11.1.2",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-prettier": "^2.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.4.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
-    "postcss-loader": "^2.1.5",
     "prettier": "^1.12.1",
     "react-hot-loader": "^4.1.3",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga-tester": "^1.0.379",
+    "redux-testkit": "^1.0.6",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.11.3",
     "webpack-dev-server": "^2.11.1"
-  }
+  },
+  "_flowComment": "NOTE: for flow add also flow-bin and flow-typed"
 }
