--- a/admin/.babelrc
+++ b/admin/.babelrc
@@ -18,7 +18,11 @@
       presets: ['es2015', 'stage-2', 'react']
     },
     development: {
-      plugins: ['babel-plugin-styled-components', 'react-hot-loader/babel']
+      plugins: [
+        // NOTE: for styled components
+        // 'babel-plugin-styled-components',
+        'react-hot-loader/babel'
+      ]
     }
   }
 }
