--- a/admin/package.json
+++ b/admin/package.json
@@ -44,7 +44,8 @@
     "recompose": "~0.26.0",
     "redux-actions": "^2.3.2",
     "redux-form": "~7.3.0",
-    "redux-saga": "~0.16.0"
+    "redux-saga": "~0.16.0",
+    "styled-components": "^3.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -53,6 +54,7 @@
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
