--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "babel-polyfill": "^6.26.0",
     "history": "^4.7.2",
     "immutability-helper": "^2.7.0",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "raven-js": "^3.25.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -32,7 +34,8 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -41,6 +44,7 @@
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -50,12 +54,12 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.4.0",
-    "eslint-loader": "^2.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
@@ -70,8 +74,8 @@
     "redux-testkit": "^1.0.6",
     "style-loader": "^0.21.0",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4",
     "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
