--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "types": "if [ -f .flowconfig ]; then flow; elif [ -f tsconfig.json ]; then echo TODO run typescript; fi",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
     "unit": "echo TODO BABEL_ENV=test jest",
-    "start": "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
+    "start": "NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
     "build": "NODE_ENV=production webpack -p --config ./config/webpack.prod.js --mode production",
     "analyze": "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
   },
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "hard-source-webpack-plugin": "^0.7.4",
     "history": "^4.7.2",
     "immutability-helper": "^2.7.0",
     "lodash": "^4.17.10",
